image orientation from exif data to have image display correctly on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -87,6 +87,10 @@ body {
   }
 }
 
+img {
+  image-orientation: from-image;
+}
+
 .App {
   text-align: center;
 }
